--- a/meson.build
+++ b/meson.build
@@ -7,7 +7,7 @@ project('DPDK', 'C',
         version: run_command(find_program('cat', 'more'),
             files('VERSION')).stdout().strip(),
         license: 'BSD',
-        default_options: ['buildtype=release', 'default_library=static'],
+        default_options: ['buildtype=debug', 'default_library=static'],
         meson_version: '>= 0.49.2'
 )
 
