--- a/drivers/net/failsafe/meson.build
+++ b/drivers/net/failsafe/meson.build
@@ -1,11 +1,6 @@
 # SPDX-License-Identifier: BSD-3-Clause
 # Copyright(c) 2018 Intel Corporation
 
-if is_windows
-    build = false
-    reason = 'not supported on Windows'
-    subdir_done()
-endif
 
 cflags += '-std=gnu99'
 cflags += '-D_DEFAULT_SOURCE'
@@ -13,8 +8,8 @@ cflags += '-D_XOPEN_SOURCE=700'
 cflags += '-pedantic'
 if is_linux
     cflags += '-DLINUX'
-else
-    cflags += '-DBSD'
+#else
+#    cflags += '-DBSD'
 endif
 
 sources = files(
